# timage

./: CMakeLists.txt  Makefile  README  cv_timage.c  gm_timage.c  gm_timage.h  lua_timage.c  lua_timage.h  timage.h
sample/: gm_test.c
sample/lua/: inner_pad.lua
